--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jslearning",
   "version": "1.0.0",
   "description": "",
-  "main": "dateCelebration.js",
+  "private": true,
   "directories": {
     "test": "test"
   },
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "node-fetch": "^2.6.0"
