--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@types/jest": "^25.1.4",
+    "@types/node-fetch": "^2.5.5",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -31,8 +34,10 @@
     "jest": "^25.2.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "ts-jest": "^25.2.1",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
