--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
     "compilerOptions": {
+        "outDir": "./dist/",
         "jsx": "react",
+        "noImplicitAny": true,
         "esModuleInterop": true,
+        "module": "commonjs",
+        "target": "es6",
         "sourceMap": true
-    },
-    "include": [
-        "./src/component/*.tsx"
-    ]
+    }
+    
+    // "include": [
+    //     "./src/component/*.tsx",
+    //     "./src/*.tsx"
+    // ]
 }
