--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
         "module": "commonjs",
         "target": "es6",
         "sourceMap": true
-    }
-    
-    // "include": [
-    //     "./src/component/*.tsx",
-    //     "./src/*.tsx"
-    // ]
+    },
+    "exclude": [
+        "node_modules",
+        "dist",
+        "./test/*.ts"
+    ]
 }
